[project]

version = '0.0.7'
name="gobnb"
description = 'Airbnb scraper in Python'
authors = [
  { name="John Balvin", email="johnchristian@hotmail.es" },
]
readme= "README.md"
keywords=['airbnb', 'scraper', 'crawler']
dependencies=['curl_cffi','bs4']


[project.urls]
Homepage='https://github.com/johnbalvin/pybnb'