[project]

version = '0.0.9'
name="gobnb"
description = 'Airbnb scraper in Python'
authors = [
  { name="John Balvin", email="johnchristian@hotmail.es" },
]
readme= "README.md"
keywords=['airbnb', 'scraper', 'crawler', 'requests']
dependencies=['curl_cffi','bs4','requests']


[project.urls]
Homepage='https://github.com/johnbalvin/pybnb'